# poker-buddy

./: .env.example  .gitignore  DESIGN.md  NEXT.md  README.md  RUN_TOMORROW.md  agent-config.json  pyproject.toml  system-prompt.md
.github/workflows/: deploy-pages.yml
backend/: db.py  grader.py  main.py
backend/engines/: SIX_MAX_NOTES.md  six_max_preflop.py
backend/integrations/: hu_trainer.py
backend/tools/: confidence.py  memory.py  postflop_lookup.py  preflop_lookup.py  theory_lookup.py
frontend/: index.html  manifest.json  service-worker.js
scripts/: grade_transcripts.py  relive.sh  start.sh  sync_agent.py  update_agent.py  wire-agent.sh
tests/: test_confidence.py  test_db.py  test_eval.py  test_grader.py  test_hu_trainer.py  test_main.py  test_memory.py  test_postflop_lookup.py  test_preflop_lookup.py  test_six_max_preflop.py  test_theory_lookup.py
theory/: concept-3bet-pots.md  concept-bb-defense.md  concept-bet-sizing-theory.md  concept-blockers-combinatorics.md  concept-board-textures.md  concept-cbet-sizing.md  concept-exploiting-player-types.md  concept-hu-turn-play.md  concept-hu-vs-6max.md  concept-opponent-types.md  concept-range-advantage.md  concept-stack-depth.md  strategy-notes.md
