[project]
name = "poker-buddy"
version = "0.1.0"
description = "Voice-first NLH cash poker discussion partner."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "httpx>=0.27",
    "elevenlabs>=2.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
